[Tango->FCM] Fix reflection blocking.

GetID is called before AddAppHandler. This results into generation of the
ID which has nothing to do with Token, which is generated.
This behavior breaks the reflection blocking.

Bug: 915152
Change-Id: I3b3c37d47773b69400c7e3234b1265b4b9cc35fc
Reviewed-on: https://chromium-review.googlesource.com/c/1377733
Commit-Queue: Tatiana Gornak <melandory@chromium.org>
Reviewed-by: Jan Krcal <jkrcal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616666}
Former-commit-id: d175dec0587b7cabf70295721fc4a7e5f9c951e7